$Id$

Summary of Changes for Duro

Changes for Duro 0.8

- Removed the libname argument from RDB_implement_type(). Selectors,
  getters, and setters are now created using RDB_create_ro_op() and
  RDB_create_update_op().

- Implemented relation-valued table attributes.

- Added RDB_expr_contains().

- Implemented insert into RENAME, WRAP, UNWRAP tables.

- Implemented RDB_project_tuple() and RDB_join_tuples().

- Added tuple operations to the expression parser.

Changes for Duro 0.7

- Tcl interface, including evaluation of relational expressions in
  Tutorial D syntax. A C interface for expression parsing is provided.

- Implemented RDB_sdivide().

- Implemented tuple-valued table attributes, RDB_wrap(), and RDB_unwrap().

- Implemented RDB_remove().

- Implemented insert into projections.

- Added support for multiplication, division, unary minus, and string
  concatenation in expressions.

- Added RDB_table_to_obj() and RDB_obj_table().

- Renamed RDB_obj_set_XXX() to RDB_XXX_to_obj() and RDB_expr_table() to
  RDB_table_to_expr().

- Dropped RDB_tuple and RDB_array, using RDB_object instead. Renamed
  RDB_array_get_tuple() as RDB_array_get().

- Replaced RDB_make_persistent() by RDB_add_table().

- Fixed bug in RDB_extract_tuple().

- Fixed bug with updating key attributes of tables with more than one
  candidate key.

- Fixed problem with commit/rollback after dropping tables.

- Now using to BerkeleyDB 4.2 (no modifications were required)

Changes for Duro 0.6

- For the sake of uniformity, changed argument order of RDB_table_to_array()

- RDB_array_get_tuple() now obtains a pointer to a RDB_tuple.

- Added sorting (through the seqitc/seqitv arguments of
  RDB_table_to_array())

- Renamed RDB_value as RDB_object. Renamed RDB_init_value() as
  RDB_init_obj(), etc.

- RDB_drop_type now takes a RDB_transaction * argument

- More API changes. A draft API spec is now available.

- Replaced structure RDB_key_attrs by the more general RDB_string_vec.
