@@ -47,6 +47,7 @@ See the release notes for details.
 <li><a href="#sdivide">RDB_sdivide</a>
 <li><a href="#select">RDB_select</a>
 <li><a href="#set_table_name">RDB_set_table_name</a>
+<li><a href="#subset">RDB_subset</a>
 <li><a href="#sum">RDB_sum</a>
 <li><a href="#summarize">RDB_summarize</a>
 <li><a href="#table_contains">RDB_table_contains</a>
@@ -176,6 +177,7 @@ See the release notes for details.
 <li><a href="#expr_max">RDB_expr_max</a>
 <li><a href="#expr_min">RDB_expr_min</a>
 <li><a href="#expr_sum">RDB_expr_sum</a>
+<li><a href="#expr_subset">RDB_expr_subset</a>
 <li><a href="#selector">RDB_selector</a>
 <li><a href="#table_to_expr">RDB_table_to_expr</a>
 <li><a href="#user_op">RDB_user_op</a>
